# mcp-gtags-server

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  server.json
.github/workflows/: ci.yml  eval.yml  publish-registry.yml  publish.yml  release-binaries.yml
docs/: capability.md
evals/: golden.jsonl
evals/agent/: README.md  grade.py  mcp-gtags.json  questions.jsonl  run_ab.py
mcpb/: manifest.json
scripts/: benchmark.sh  build-mcpb.sh  install.sh  stability_exercise.py
src/gtags_mcp/: __init__.py  config.py  enrich.py  evalharness.py  fileset.py  guards.py  macros.py  output.py  server.py  toolchain.py
tests/: test_bootstrap.py  test_config.py  test_enrich.py  test_eval.py  test_guards.py  test_macros.py  test_roots.py  test_server.py  test_toolchain.py  test_workflow_tools.py
