[project]
name = "mcp-gtags-server"
version = "1.4.1"
description = "Indexed code navigation for AI coding agents — replace grep scans with GNU Global (gtags) lookups over MCP. ~100x faster and radically less noise on million-line C/C++ codebases."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Harshith Sunku" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "gtags",
    "gnu-global",
    "code-navigation",
    "code-search",
    "ai-agents",
    "claude",
    "c",
    "c++",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # >=1.14: earlier FastMCP releases crash at import on this package's
    # union-typed tool signatures (Tool.from_function issubclass TypeError);
    # 1.14 is the oldest release the server imports and the suite passes on.
    "mcp>=1.14.0",
    "anyio>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/harshithsunku/mcp-gtags-server"
Repository = "https://github.com/harshithsunku/mcp-gtags-server"
Issues = "https://github.com/harshithsunku/mcp-gtags-server/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mcp-gtags-server = "gtags_mcp.server:main"
# Legacy alias — kept so existing MCP client configs keep working.
gtags-mcp = "gtags_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gtags_mcp"]
